# git-annex-browser

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: annex.rs  app.rs  main.rs  node.rs  util.rs  worker.rs
src/ui/: keyboard.rs  mod.rs  tui.rs
