[package]
name = "git-annex-browser"
version = "0.1.0"
authors = ["janttsu"]
description = "TUI for git-annex repositories and drives. All the information is available via normal git-annex commands, but the tool caches it (via --scan) so you can quickly browse the overall state of many (often offline) drives through a fast, clear interface instead of repeatedly running slow queries."
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2024"
repository = "https://github.com/janttsu/git-annex-browser"
keywords = ["git-annex", "tui", "terminal", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["alloc"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
libc = "0.2"
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2"

[[bin]]
name = "git-annex-browser"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
